--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
-    "react-native-web": "~0.11.7"
+    "react-native-web": "~0.11.7",
+    "vue-native-core": "0.1.4",
+    "vue-native-helper": "0.1.4"
   },
   "devDependencies": {
+    "@babel/core": "7.0.0",
     "babel-preset-expo": "~8.1.0",
-    "@babel/core": "^7.8.6"
+    "vue-native-scripts": "0.1.4"
   },
   "private": true
 }
